assets/css/main.css
/* ... */
		#header.reveal {
			-moz-animation: reveal-header 0.5s;
			-webkit-animation: reveal-header 0.5s;
			-ms-animation: reveal-header 0.5s;
			animation: reveal-header 0.5s;
		}

		#header.alt {
			-moz-animation: none;
			-webkit-animation: none;
			-ms-animation: none;
			animation: none;
			background: transparent;
			box-shadow: none;
			color: #fff;
			padding: 2em 2.5em;
			position: absolute;
		}

			#header.alt nav {
				right: 2.5em;
				top: 1.75em;
			}

				#header.alt nav ul li.active > a, #header.alt nav ul li:hover > a {
					border: solid 1px;
				}

/* Dropotron */

	.dropotron {
		background: #fff;
		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
		line-height: 2.25em;
		min-width: 13em;
		padding: 1em 0;
		text-transform: uppercase;
		margin-top: calc(-1em + 1px);
	}

		.dropotron.level-0 {
			font-size: 0.7em;
			font-weight: 400;
			margin-top: 1.5em;
		}

			.dropotron.level-0:before {
				border-bottom: solid 0.5em #fff;
				border-left: solid 0.5em transparent;
				border-right: solid 0.5em transparent;
				content: '';
				left: 0.75em;
				position: absolute;
				top: -0.45em;
			}

		.dropotron > li {
			border-top: solid 1px rgba(124, 128, 129, 0.2);
		}

			.dropotron > li > a {
				-moz-transition: none;
				-webkit-transition: none;
				-ms-transition: none;
				transition: none;
				color: inherit;
				text-decoration: none;
				padding: 0 1em;
				border: 0;
			}

			.dropotron > li:hover > a {
				background: #83d3c9;
				color: #fff;
			}

			.dropotron > li:first-child {
				border-top: 0;
			}


/* Logo */

#logo {
    max-width: 100px;
    margin-top: -25px;
    margin-bottom: -40px;
}


/* Banner */

	@-moz-keyframes reveal-banner {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-webkit-keyframes reveal-banner {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@-ms-keyframes reveal-banner {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	@keyframes reveal-banner {
		0% {
			opacity: 0;
		}

		100% {
			opacity: 1;
		}
	}

	#banner {
		background-attachment: scroll, scroll, scroll, fixed;
		background-color: #444444;


		/* background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/banner1.jpg"); *
		background-position: bottom left, bottom right, top left, top center;
		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
		background-size: 25em, 25em, 100%, cover;
        */
        

        -webkit-animation: bgSlider;
                animation: bgSlider;
        -webkit-animation-duration: 20s;
                animation-duration: 20s;
        -webkit-animation-iteration-count: infinite;
                animation-iteration-count: infinite;
        -webkit-animation-direction: alternate;
                animation-direction: alternate;

        -webkit-transition: background-image 1s;
        -o-transition: background-image 1s;
        transition: background-image 1s;
        moz-transition: background-image 1s;
        webkit-transition: background-image 1s;
        /*transition-timing-function: ease-in-out;*/

        background-position: top left;
		background-repeat:  no-repeat;
		background-size:  cover;
		color: #fff;
		cursor: default;
		padding: 6em 0;
		text-align: center;
        height: 100vh;
	}

@-webkit-keyframes bgSlider {
    0% {
        background-image: url("../../images/banner/1.jpg");
    }
    25% {
        background-image: url("../../images/banner/2.jpg");
    }
    50% {
        background-image: url("../../images/banner/3.jpg");
    }
    75% {
        background-image: url("../../images/banner/4.jpg");
    }
    100% {
        background-image: url("../../images/banner/5.jpg");
    }
}

@keyframes bgSlider {
    0% {
        background-image: url("../../images/banner/1.jpg");
    }
    25% {
        background-image: url("../../images/banner/2.jpg");
    }
    50% {
        background-image: url("../../images/banner/3.jpg");
    }
    75% {
        background-image: url("../../images/banner/4.jpg");
    }
    100% {
        background-image: url("../../images/banner/5.jpg");
    }
}

		#banner .inner {
			-moz-animation: reveal-banner 1s 0.25s ease-in-out;
			-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
			-ms-animation: reveal-banner 1s 0.25s ease-in-out;
			animation: reveal-banner 1s 0.25s ease-in-out;
			-moz-animation-fill-mode: forwards;
			-webkit-animation-fill-mode: forwards;
			-ms-animation-fill-mode: forwards;
			animation-fill-mode: forwards;
			/* background: rgba(45, 35, 43, 0.5); */
			color: #fff;
			display: inline-block;
			opacity: 0;
			padding: 3em;
			text-align: center;
		}

			#banner .inner header {
				display: inline-block;
				/* border-bottom: solid 2px;
				border-top: solid 2px; */
				margin: 0 0 2em 0;
				padding: 3px 0 3px 0;
			}

				#banner .inner header h2 {
					/* border-bottom: solid 2px;
					border-top: solid 2px; */
					font-size: 4em;
					font-weight: 700;
					letter-spacing: 0.2em;
					margin: 0;
					padding-left: 0.05em;
					position: relative;
					text-transform: uppercase;
				}

			#banner .inner p {
				letter-spacing: 0.1em;
				margin: 0;
				/*text-transform: uppercase;*/
                font-size: 1em;
                font-weight: 500;
			}
                #banner .inner p i {
                    margin-right: 10px;
                }

				#banner .inner p a {
					color: inherit;
					font-weight: 400;
					text-decoration: none;
				}

			#banner .inner footer {
				margin: 2em 0 0 0;
			}

/* Main */

	#main {
		/* background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/dark-bl.svg"), url("images/dark-br.svg");
		background-position: top left, top right, bottom left, bottom right;
		background-repeat: no-repeat;
		background-size: 25em; */
		padding: 7em 0;
	}

		#main > :last-child {
			margin-bottom: 0;
		}
/* ... */

